# SparkDistill

./: CHANGELOG.md  CONTRIBUTING.md  README.md  pyproject.toml
tritonbench/: PROJECT.md  bench_config.py  pyproject.toml
tritonbench/distill/: __init__.py  data_generator.py  export_sft.py  prompt_builder.py  quality_filter.py
tritonbench/scripts/: generate_problems.py  validate_all_problems.py
tritonbench/tests/: test_converters.py  test_distill.py  test_numerical_metrics.py  test_reference_oracle.py  test_validator_worker.py
tritonbench/tritonbench/: cli.py
tritonbench/tritonbench/converters/: __init__.py  difficulty_map.py  from_g_json.py  from_t_jsonl.py  generate_corpus.py  validate_problem.py
tritonbench/tritonbench/core/: __init__.py  evaluator.py  numerical.py  performance.py  reference_oracle.py  repair_agent.py  runner.py  validator.py  validator_worker.py
tritonbench/tritonbench/problems/bugfix/: autotune_key_mismatch.yaml  bad_atomic_add.yaml  block_ptr_deprecated.yaml  causal_mask_inclusive.yaml  constexpr_runtime_mix.yaml  dropout_mask_reuse.yaml  dtype_mismatch_store.yaml  forgotten_mask_store.yaml  gather_oob_index.yaml  inplace_alias_bug.yaml  int_div_truncation.yaml  missing_fp32_accum.yaml  missing_other_on_masked_load.yaml  off_by_one_pid.yaml  reinterpret_pointer_bug.yaml  rms_eps_missing.yaml  softmax_no_max_sub.yaml  swapped_mn_tiles.yaml  wrong_axis_reduce.yaml  wrong_num_warps_hint.yaml  wrong_stride_layout.yaml
tritonbench/tritonbench/problems/level1_basic/: add_example.yaml  add_value.yaml  bitwise_and_binomial.yaml  erfc_sqrt.yaml  (+52 more)
(+373 files in other folders)
